--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,8 @@
         <url/>
     </scm>
     <properties>
-        <java.version>24</java.version>
+        <!-- current arch-unit version only supports java 23 -->
+        <java.version>23</java.version>
         <spring-modulith.version>1.3.3</spring-modulith.version>
     </properties>
     <dependencies>
@@ -70,6 +71,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
+                        -Xshare:off
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
