--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
             <version>1.5.2.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
